--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Demo Application</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script>
+        </script>
        
     </head>
     <body>
