Lets alert Hello World

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <title>Demo Application</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-       
+       <script>
+           alert('Hello');
+       </script>
     </head>
     <body>
     
